# farcaster-node

./: .clippy.toml  .dockerignore  .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  build.rs  codecov.yml  docker-compose.yml  dprint.json  farcasterd.toml  sequencediagram.txt  shell.nix  testnet.addrs
.github/workflows/: binaries.yml  create-compose-release.yml  create-release.yml  docs.yml  draft-new-release.yml  package.yml  static-analysis.yml  static_analysis.yml  test.yml
compose/: Dockerfile  docker-compose.yml  farcasterd.toml
diagrams/: README.md  node-buses.excalidraw  node-busses.excalidraw  reconnect_sequencediagram.txt  sequencediagram.txt  staterecovery_sequencediagram.txt  swap_state_machine.txt
doc/: README.md  docker-stack.md  install-guide.md  local-swap.md  reconnect_sequencediagram.txt  sequencediagram.txt  staterecovery_sequencediagram.txt  swap_state_machine.txt  workflows.md
doc/lnp/: CHANGELOG.md  README.md
docs/: Home.md  Install-guide.md  Run-local-swap.md  Testing-with-farcaster.dev.md  Usage.md  Using-Docker.md
feature/tui/: Cargo.toml
feature/tui/src/: main.rs
shell/: _farcasterd  _farcasterd.ps1  _lnp-cli  _lnp-cli.ps1  _peerd  _peerd.ps1  _swap-cli  _swap-cli.ps1  _swapd  _swapd.ps1  farcasterd.bash  lnp-cli.bash  peerd.bash  swap-cli.bash  swapd.bash
src/: automata.rs  chains.rs  client.rs  config.rs  error.rs  event.rs  farcaster.rs  lib.rs  opts.rs  service.rs
src/bus/: bridge.rs  client.rs  ctl.rs  info.rs  mod.rs  msg.rs  p2p.rs  request.rs  rpc.rs  sync.rs  types.rs
src/checkpointd/: mod.rs  opts.rs  runtime.rs
src/cli/: command.rs  mod.rs  opts.rs
src/databased/: mod.rs  opts.rs  runtime.rs
src/farcasterd/: mod.rs  opts.rs  runtime.rs  stats.rs  syncer_state_machine.rs  tor.rs  tor_control.rs  trade_state_machine.rs
src/grpcd/: mod.rs  opts.rs  runtime.rs
src/grpcd/proto/: farcaster.proto
src/peerd/: mod.rs  opts.rs  runtime.rs
src/rpc/: client.rs  ctl.rs  messages.rs  mod.rs  reply.rs  request.rs  rpc.rs
src/swapd/: .#opts.rs  mod.rs  opts.rs  process_msgs.rs  runtime.rs  state_report.rs  swap_key_manager.rs  swap_state.rs  syncer_client.rs  temporal_safety.rs  wallet.rs  wallet_client.rs
src/swapd/automata/: mod.rs  petrinet.rs
src/swapd/storage/: disk.rs  driver.rs
src/syncerd/: README.md  bitcoin_syncer.rs  mod.rs  monero_syncer.rs  opts.rs  runtime.rs  syncer_state.rs  types.rs
src/walletd/: mod.rs  opts.rs  runtime.rs  state.rs
tests/: .farcasterd_1  .farcasterd_1.ci.toml  .farcasterd_1.toml  .farcasterd_2.ci.toml  .farcasterd_2.toml  README.md  bitcoin.rs  cli.rs  docker-compose.yml  functional-swap.rs  functional.rs  grpc.rs  large_tx_serialization.rs  monero.rs  rpc.rs  swap.rs  tooling.rs
tests/cfg/: config.yml  electrs.toml  fc1.ci.toml  fc1.toml  fc2.ci.toml  fc2.toml
tests/utils/: assert.rs  config.rs  fc.rs  misc.rs  mod.rs
